fix search alignment

--- a/packages/web/src/components/Search/Search.module.scss
+++ b/packages/web/src/components/Search/Search.module.scss
@@ -2,8 +2,9 @@
 
 .search {
   @include evenlySpace();
-  justify-content: flex-start;
-  align-content: flex-start;
+  justify-items: start;
+  justify-content: stretch;
+  align-content: start;
 }
 
 .searchTitle {
